[project]
name = "archive-problems"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kash", email = "cuisinealtair@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "archive_problems:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/archive_problems"]
