[project]
name = "problem100"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kash", email = "cuisinealtair@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "problem100:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/problem100"]
